# voicevox-ros2-docker

./: .gitignore  CLAUDE.md  Dockerfile  README-e.md  README.md  compose.yaml
src/voicevox_ros2/: package.xml
src/voicevox_ros2/voicevox_ros2/: tts_node.py
